--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -18,7 +18,8 @@ var contWifite = 0;
 var contOpendoor =0;
 var contNosql = 0;
 var contOdat = 0;
-var contDnsEnum = 0;}
+var contDnsEnum = 0;
+}
 <br>
 <div class="container">
 <h2><em>Sei sicuro di voler cancellare il progetto</em><strong> @Html.DisplayFor(model => model.Nome) ?</strong></h2>
